add qcon BR talk

--- a/_posts/2016-03-28-2016-qconsp.md
+++ b/_posts/2016-03-28-2016-qconsp.md
@@ -1,5 +1,5 @@
 ---
 layout: post
 title: "Talk at QCON Sao Paulo: Shopify at Scale"
-external_url: http://qconsp.com/presentation/shopify-at-scale-resilience-developer-productivity-and-200000-stores
+external_url: https://www.infoq.com/br/presentations/shopify-at-scale-resilience-developer-productivity
 ---
