--- a/_posts/2016-11-20-airtable.md
+++ b/_posts/2016-11-20-airtable.md
@@ -84,7 +84,7 @@ how to brew a tea when entering it in, learning from the previous brews. Most of
 the time this happens on the Airtable app. I add the new record when I brew the
 tea in my kitchen, and then it'll suggest how to brew it:
 
-![](http://recordit.co/voQYSHUfrv.gif)
+![](/static/images/airtable/tea.gif)
 
 Later I even added an integration that will send me a push notification on my
 phone when the tea is done brewing based on the offset between the "Time" column
@@ -128,7 +128,7 @@ You may notice the "Uses" column above. I wrote a Chrome extension that'll
 increment the amount of times I've used a word by one if I ever use it in my
 browser.
 
-![](http://g.recordit.co/YvQuUc3SHl.gif)
+![](/static/images/airtable/words_ext.gif)
 
 This is to encourage me to use new words more, next step to improve this is to
 figure out how to use the data on word usage to push me to use words more.
