more pictures less embeds

--- a/_posts/2016-11-20-airtable.md
+++ b/_posts/2016-11-20-airtable.md
@@ -48,7 +48,7 @@ it down here to guide my next decision. It's not perfectly tagged, I have on my
 list for this base to write a script that'll populate the books with
 metadata--but it hasn't been terribly important.
 
-<iframe class="airtable-embed" src="https://airtable.com/embed/shrOkDDlgEymavusY?backgroundColor=red&viewControls=on" frameborder="0" onmousewheel="" width="100%" height="533" style="background: transparent; border: 1px solid #ccc;"></iframe>
+![](/static/images/airtable/books.png)
 
 ## Shopping
 
@@ -70,14 +70,14 @@ with automating the population of those lists.
 
 The base first of all has a list of all the teas I've bought:
 
-<iframe class="airtable-embed" src="https://airtable.com/embed/shrx3ZrJCUPRuA0ym?backgroundColor=gray&viewControls=on" frameborder="0" onmousewheel="" width="100%" height="533" style="background: transparent; border: 1px solid #ccc;"></iframe>
+![](/static/images/airtable/teas.png)
 
 This serves as a starting point with price, type, picture and vendor. If you
 click on each record, you'll see more details. This Base started as just a table
 of all my teas and my rating of them. Later, following Gall's law, I introduced
 the complexity of periodically recording brews of teas:
 
-<iframe class="airtable-embed" src="https://airtable.com/embed/shrP7WkURlpw0WEsJ?backgroundColor=gray&viewControls=on" frameborder="0" onmousewheel="" width="100%" height="533" style="background: transparent; border: 1px solid #ccc;"></iframe>
+![](/static/images/airtable/brews.png)
 
 Later I wrote an integration with the Airtable API that'd automatically suggest
 how to brew a tea when entering it in, learning from the previous brews. Most of
@@ -157,7 +157,7 @@ then everyone has to bring a dish from that country. We've been through quite a
 few countries such as Hong Kong, Bangladesh, Greece, and Brazil. I've started
 tracking some of these and other countries I've done independently in an Airtable.
 
-<iframe class="airtable-embed" src="https://airtable.com/embed/shrxk9EnNU2zMzTcg?backgroundColor=pink&viewControls=on" frameborder="0" onmousewheel="" width="100%" height="533" style="background: transparent; border: 1px solid #ccc;"></iframe>
+![](/static/images/airtable/around_the_world.png)
 
 The goal is to have cooked a dish from most countries that I wouldn't be
 embarrassed to serve to someone from that country. Luckily, working at Shopify I
@@ -174,6 +174,7 @@ playing Pokemon Go, I started walking around taking pictures of plants, flowers
 and trees I didn't know. I went home to find out what they were, and then
 automatically generated flash cards with the extension mentioned earlier.
 
-<iframe class="airtable-embed" src="https://airtable.com/embed/shr9k8Jblmb0TzkEv?backgroundColor=green&viewControls=on" frameborder="0" onmousewheel="" width="100%" height="533" style="background: transparent; border: 1px solid #ccc;"></iframe>
+![](/static/images/airtable/flowers.png)
+![](/static/images/airtable/trees.png)
 
 This has greatly improved the amount of trees and flowers I know.
