add notification screenshot

--- a/_posts/2016-11-20-airtable.md
+++ b/_posts/2016-11-20-airtable.md
@@ -74,6 +74,8 @@ Later I even added an integration that will send me a push notification on my
 phone when the tea is done brewing based on the offset between the "Time" column
 and when the record was created.
 
+![](/static/images/airtable/notification.png)
+
 ## Words
 
 Every time I highlight a word on my Kindle I have a script on my server that'll
