--- a/_posts/2016-11-20-airtable.md
+++ b/_posts/2016-11-20-airtable.md
@@ -52,7 +52,8 @@ metadata--but it hasn't been terribly important.
 
 ## Tea
 
-The base first of all has a list of all the teas I've bought:
+[The base](https://airtable.com/shr766dr8JhU0jumT) first of all has a list of
+all the teas I've bought:
 
 ![](/static/images/airtable/teas.png)
 
@@ -180,4 +181,5 @@ automatically generated flash cards with the extension mentioned earlier.
 ![](/static/images/airtable/flowers.png)
 ![](/static/images/airtable/trees.png)
 
-This has greatly improved the amount of trees and flowers I know.
+This has greatly improved the amount of trees and flowers I know. You can see
+the full base [here](https://airtable.com/shrGYC5sNPLqD49fp).
