fix season driven cooking

--- a/_posts/2016-11-20-airtable.md
+++ b/_posts/2016-11-20-airtable.md
@@ -134,7 +134,9 @@ cooking by season, and the latter to get inspiration for which cuisines from
 around the world a certain ingredient is endemic to. E.g. Swiss chard originates
 in the Mediterranean, so looking for Italian recipes may yield better results
 than venturing into Japanese cooking. On the contrary, eggplant originates in
-Asia so looking to Asia for inspiration in cooking it may be a great idea.
+Asia so looking to Asia for inspiration in cooking it may be a great idea. I
+wrote more about this in [another
+post](http://sirupsen.com/season-driven-cooking/).
 
 ## Around the World Cuisine
 
