--- a/_posts/2017-01-06-2016.md
+++ b/_posts/2017-01-06-2016.md
@@ -29,14 +29,14 @@ needed that to prove to myself it was possible for me to read 40+ books a year.
 I still haven't found the killer knowledge digestion routine, but I've used a
 combination of tools that have certainly helped:
 
-* Discussing with friends. I overlapped with friends on some books from this
+* **Discussing with friends**. I overlapped with friends on some books from this
 year, which often sparked conversations. It's curious how differently some
 points resonate with others, that I completely glanced over.
-* Writing reviews/summaries. I've written reviews for a handful of books over
+* **Writing reviews/summaries**. I've written reviews for a handful of books over
 the year on Goodreads. This hasn't been as effective as I would've liked it to,
 but certainly is better than nothing. It's more useful as a way to refresh the
 contents of a book, than as a mean to force long-term memory.
-* Commonplace book. Inspired by [Ryan
+* **Commonplace book**. Inspired by [Ryan
 Holiday](http://ryanholiday.net/how-and-why-to-keep-a-commonplace-book/), I
 started keeping a commonplace book in Workflowy. The sources vary widely from
 conversations, articles, podcasts, books, Kindle highlights, ideas, .. any
@@ -45,13 +45,13 @@ For a couple of months in the beginning of the year I sat down every morning and
 spent 10-30 minutes writing about one of the pieces in the commonplace book. I
 keep coming back to the ideas that unfolded in that writing, and this is a habit
 I'm going to make another effort to cultivate this year.
-* Flash cards. For less abstract books, flash cards have helped tremendously.
+* **Flash cards**. For less abstract books, flash cards have helped tremendously.
 More on this technique in a second.
-* Taking notes. For primarily audiobooks I experimented with taking notes while
+* **Taking notes**. For primarily audiobooks I experimented with taking notes while
 listening. Similar to writing reviews/summaries that usually came from Kindle
 highlights or hand-written notes, I didn't find this as effective as I thought
 it would be (unless it landed in the commonplace book).
-* Re-reading / re-listening. When re-visiting content this year from previous
+* **Re-reading / re-listening**. When re-visiting content this year from previous
 years, I was astonished. From books and podcasts I thought I had forgotten
 everything from, every couple of pages or minutes an idea was presented that I
 had found myself repeating almost word-for-word without being aware of their
@@ -128,11 +128,12 @@ hopes he'd respect me just a tiny bit more.
 Now I [track religiously](http://sirupsen.com/airtable/) which teas I drink, how
 I brew them, and how they taste.
 
-## Becoming a Lead
+## Work
 
 By the end of last year, I started working on the "Pods Project". The mission of
 this was to not run one massive Shopify in one datacenter, but create the
-ability to run many tiny Shopifys all around the world. After a month of
+ability to run many tiny Shopifys all around the world. ([A
+talk](https://www.youtube.com/watch?v=7UyDK2bDjc4) about this) After a month of
 pondering about the project, taking a stab at solving a corner of the problem
 here and there, and writing a 10 page technical document about it, I became the
 lead of a team of two people at the time. Imposter syndrome showed its face, and
@@ -147,6 +148,11 @@ seen by all members of the team. In 2016 I learned so much about managing a team
 and project. I screwed up a lot of things, and did some things right. There's
 considerable room for improvement in 2017, and I hope the rekindling of the
 writing habit can accelerate this.
+
+Additionally in 2016 I started an internal Podcast about what people in the
+company are working on to get a peek into more corners of a fast-growing
+company. You can read more about this in [this
+post](http://sirupsen.com/podcast).
 
 ## Cooking
 
