--- a/_posts/2017-01-06-2016.md
+++ b/_posts/2017-01-06-2016.md
@@ -8,54 +8,59 @@ Last year I posted mostly [numbers](http://sirupsen.com/2015/) from the year of
 
 ## Reading
 
-In 2015, I had a focused on developing a reading routing. I kicked the news
-habit years ago, because I rarely found myself circling back in my mind to what
-I had read in the news. The tidbits of incoherent information news generally
-provide, with the lack of a trunk to associate it with, makes it difficult to
-remember. On the contrary, the books and in-depth articles I read, I often find
-myself coming back to. In 2015 I managed to read and listen to a total of 40
-books, but I wasn't happy with the retention. By the end of the year it felt
-like a race to an arbitrary finish line rather than a pursuit of perspective.
-The majority of the books of 2015 were business books, which was also something
-I was looking to change. My friends often tease me that my English vocabulary is
-hilariously skewed by business jargon since English became my day-to-day
-language. I will call an apartment storage locker an "anti-pattern", and
-struggle with vocabulary related to a non-urban setting such as an ice-fishing
-excursion to a friend's hometown or a visit to my girlfriend's family's tobacco
-farm. In an effort to both improve vocabulary and retention, I started
-meditating on improving absorption of books and other sources. The obvious first
-step is to kill the goal of N books per year. By no means was that wasted, I
-needed that to prove to myself it was possible for me to read 40+ books a year.
-I still haven't found the killer knowledge digestion routine, but I've used a
-combination of tools that have certainly helped:
+In 2015, I focused on developing a reading routine. I kicked the news habit
+years ago. I found the The tidbits of incoherent information with no trunk to
+associate it with difficult to remember. On the contrary, the books and in-depth
+articles I read, I often found myself coming back to. In 2015 I managed to read
+and listen to a total of 40 books, but I wasn't happy with the retention. By the
+end of the year it felt like a race to an arbitrary finish line rather than a
+pursuit of perspective.  The majority of the books of 2015 were business books,
+a bias I was looking to combat this year. My friends often tease me that my
+English vocabulary is hilariously skewed by business jargon since English became
+my day-to-day language. I will call an apartment storage locker an
+"anti-pattern", and struggle with vocabulary related to a non-urban setting such
+as an ice-fishing excursion to a friend's hometown or a visit to my girlfriend's
+family's tobacco farm. In an effort to both improve vocabulary and retention, I
+started meditating on improving absorption of books and other sources. The
+obvious first step is to kill the goal of N books per year. By no means was that
+wasted, I needed that to prove to myself it was possible for me to read 40+
+books a year.  I still haven't found the killer knowledge digestion routine, but
+I've used a combination of tools that have certainly helped:
 
 * **Discussing with friends**. I overlapped with friends on some books from this
 year, which often sparked conversations. It's curious how differently some
-points resonate with others, that I completely glanced over.
-* **Writing reviews/summaries**. I've written reviews for a handful of books over
-the year on Goodreads. This hasn't been as effective as I would've liked it to,
-but certainly is better than nothing. It's more useful as a way to refresh the
-contents of a book, than as a mean to force long-term memory.
+points resonate with others, that I completely glanced over. I've found this
+valuable, and hope to foster more of this in the new year.
+* **Writing reviews/summaries**. I've written reviews for a handful of books
+over the year on Goodreads. This hasn't been as effective on memory as I
+would've liked it to, but certainly is better than nothing. It's more useful as
+a way to refresh the contents of a book, than as a mean to force long-term
+memory.
 * **Commonplace book**. Inspired by [Ryan
 Holiday](http://ryanholiday.net/how-and-why-to-keep-a-commonplace-book/), I
-started keeping a commonplace book in Workflowy. The sources vary widely from
-conversations, articles, podcasts, books, Kindle highlights, ideas, .. any
-source of knowledge you can think of. They're quotes, rough ideas, and pictures.
-For a couple of months in the beginning of the year I sat down every morning and
-spent 10-30 minutes writing about one of the pieces in the commonplace book. I
-keep coming back to the ideas that unfolded in that writing, and this is a habit
-I'm going to make another effort to cultivate this year.
-* **Flash cards**. For less abstract books, flash cards have helped tremendously.
-More on this technique in a second.
-* **Taking notes**. For primarily audiobooks I experimented with taking notes while
-listening. Similar to writing reviews/summaries that usually came from Kindle
-highlights or hand-written notes, I didn't find this as effective as I thought
-it would be (unless it landed in the commonplace book).
-* **Re-reading / re-listening**. When re-visiting content this year from previous
-years, I was astonished. From books and podcasts I thought I had forgotten
-everything from, every couple of pages or minutes an idea was presented that I
-had found myself repeating almost word-for-word without being aware of their
-source. This sparked some confidence that I hadn't forgotten everything.
+started keeping a "commonplace book" in Workflowy of passages I found curious. A
+repository for later reflection.  The sources vary widely: conversations,
+articles, podcasts, books, Kindle highlights, ideas, .. any source of knowledge
+you can think of. They're quotes, rough ideas, and pictures.  For a couple of
+months in the beginning of the year I sat down every morning and spent 10-30
+minutes writing about one of the pieces in the commonplace book. I keep coming
+back to the ideas that unfolded in that writing, and this is a habit I'm going
+to make another effort to cultivate further this year.
+* **Flash cards**. Reviewing flash cards have been a wonderful habit to build
+for recalling more factual information. As opposed to more abstract ideas that I
+have found difficult distilling down to flash-cards. More on this technique in a
+second.
+* **Taking notes**. For primarily audiobooks I experimented with taking notes
+while listening. Similar to writing reviews/summaries that usually came from
+Kindle highlights or hand-written notes, I didn't find this as effective as I
+thought I would be (unless it landed in the commonplace book). At least, the
+mere writing doesn't make an effect. Reflection later, does, but that's a harder
+habit to build.
+* **Re-reading / re-listening**. When re-visiting content this year from
+previous years, I was astonished. From books and podcasts I thought I had
+forgotten everything from, every so often an idea was presented that I had found
+myself repeating almost word-for-word without being aware of their source. This
+sparked some confidence that I hadn't forgotten everything.
 
 With 2015 being the year to improve uptake, 2016 was a year with experiments in
 retention, and 2017 will be honing in on the tools I've found the most effective
@@ -86,44 +91,52 @@ review](https://www.goodreads.com/review/show/1722878534?book_show_action=false&
 
 After having tried to get into the habit of flash cards for a couple of years,
 this year I've been doing my flash cards nearly every single day. At this point,
-they're a staple in my learning arsenal and have been quite effective. When I
-went to Brazil earlier this year, I decided to learn as much as I could about
-the country before going. Many find museums boring, but if you've read and
-studied what's in the museum for hours before your trip it can be the most fun
-recognizing what you've only read about. I read contents about Brazil, including
-a book, and created 100s of flash cards about its history, its people, its
-cuisine and its culture. A year later, due to these flash cards, I still
-remember why Brazil has the largest Japanese population after Japan, how Brazil
-got its non-violent independency, and the rough economic history of the country
-from Brazilwood, to sugar, to coffee, and so on. As I kept reviewing my flash
-cards every morning, the cards kept growing. I started using them for food.
-Before going to a restaurant, I'd look up all the items on the menu I had no
-idea what were and create flash cards for them (I still don't understand why
-restaurants insist on using fancy culinary words that most of their diners won't
-know). I've started learning the trees and flowers of Ontario and when produce
-from celery roots to apricots are in season. When studying a fact-heavy topic,
-I'll usually create a handful of flash cards to help retain the knowledge
-long-term. I've found it freeing to study things here and there with the
-confidence that I'll still remember a good chunk of it a year later. When
-traveling to Mexico in December, I started learning the 650 most common words to
-kick off learning Spanish. Unfortunately work became quite intense at the same
-time, not leaving much excess energy to actually learn the grammar—but it'll
-certainly help when I dig deeper into the language (and was quite helpful on the
-trip too). Flash cards are now a complete habit I've kept for a year, and it's
-already helped me tremendously. [Anki](ankisrs.net), the app I use for flash
-cards, reports that I have 4286 cards. I hope to reach 10,000 this year!
+they're a staple in my learning arsenal and I have found them very effective.
+When I went to Brazil earlier this year, I decided to learn as much as I could
+about the country before going. If you don't know anything about what a museum
+has to offer, for instance, it tends to be much less interesting than if you're
+recognizing things you've only read about. I studied Brazil and created 100s of
+flash cards about its history, its people, its cuisine and its culture. A year
+later, due to these flash cards, I still remember why Brazil has the largest
+Japanese population after Japan, how Brazil got its non-violent independency,
+and the rough economic history of the country from Brazilwood, to sugar, to
+coffee, and so on. This backbone about the country made conversations with
+locals much
+more interesting.
+
+As I kept reviewing my flash cards every morning, the number of cards kept
+growing. I started using them for food.  Before going to a restaurant, I'd look
+up all the items on the menu I had no idea what were and create flash cards for
+them (I still don't understand why restaurants insist on using fancy culinary
+words that most of their diners won't know). I've started learning the trees and
+flowers of Ontario and when produce from celery roots to apricots are in season.
+
+When studying a fact-heavy topic, I'll usually create a handful of flash cards
+to help retain the knowledge long-term. I've found it freeing to study things
+here and there with the confidence that I'll still remember a good chunk of it a
+year later. When traveling to Mexico in December, I started learning the 650
+most common words to kick off learning Spanish. Unfortunately work became quite
+intense at the same time, not leaving much excess energy to actually learn the
+grammar—but it'll certainly help when I dig deeper into the language (and was
+quite helpful on the trip too).
+
+Reviewing flash cards is now an ingrained habit, and it's already helped me
+tremendously. [Anki](ankisrs.net), the app I use for flash cards, reports that I
+have 4286 cards. I hope to reach 10,000 this year!
 
 ## Tea
 
 In the beginning of last year I noticed a tea shop that had opened across from
 my apartment. I didn't know much about tea, but I had heard of fermented tea
 (pu-erh or dark tea) and wanted to try it. I came in, and got schooled hard for
-45m on tea by the owner. I walked out with $100 less in my pocket, and tea
-equipment for just as much in my arms. I was taken aback. How could someone know
-so much about something I knew absolutely nothing about? Fuelled by this healthy
+45 minutes on tea by the owner. I walked out dumbfounded with $100 worth of tea
+equipment and leaves in my arms. I was taken aback. How could someone know so
+much about something I knew absolutely nothing about? Fuelled by this healthy
 dose of Sunday intimidation I sat down, read two books on the topic, and wrote
 2,000 words of notes and compiled a total of 3 questions to ask him next time in
-hopes he'd respect me just a tiny bit more.
+hopes he'd respect me just a tiny bit more. A couple of months ago he asked me
+to watch the store for 10 minutes while picking up his kid and wife. Pretty
+proud of how far we've come.
 
 Now I [track religiously](http://sirupsen.com/airtable/) which teas I drink, how
 I brew them, and how they taste.
@@ -134,20 +147,18 @@ By the end of last year, I started working on the "Pods Project". The mission of
 this was to not run one massive Shopify in one datacenter, but create the
 ability to run many tiny Shopifys all around the world. ([A
 talk](https://www.youtube.com/watch?v=7UyDK2bDjc4) about this) After a month of
-pondering about the project, taking a stab at solving a corner of the problem
-here and there, and writing a 10 page technical document about it, I became the
-lead of a team of two people at the time. Imposter syndrome showed its face, and
-like with Sunday tea reading binge, I started consuming as much content as I
-could on leading a team and project. This is when I developed the aforementioned
-habit of writing every morning. I would write about problems that arose on the
-team, how to best lead a long-term project, and how to help people grow. It
-helped a lot. Over time, the team grew, to its peak of 7 people. A month shy of
-Black Friday and Cyber Monday, the ultimate exam, we shipped the project after a
-year of work. I am extremely proud of the team, and humbled by the growth I have
-seen by all members of the team. In 2016 I learned so much about managing a team
-and project. I screwed up a lot of things, and did some things right. There's
-considerable room for improvement in 2017, and I hope the rekindling of the
-writing habit can accelerate this.
+pondering about the project, imposter syndrome showed its face as I was tasked
+with building a team to tackle the problem. As with Sunday tea reading binge, I
+started consuming as much content as I could on leading a team and project. This
+is when I developed the aforementioned habit of writing every morning. I would
+write about problems that arose on the team, how to best lead a long-term
+project, and how to help people grow. It helped a lot. Over time, the team grew,
+to its peak of 7 people. A month shy of Black Friday and Cyber Monday, the
+ultimate exam, we shipped the project after a year of hard work. I am extremely
+proud of the team, and humbled by the growth I have seen by all members of it.
+In 2016 I learned so much about managing a team and project. I screwed up a lot
+of things, and did some things right. There's considerable room for improvement
+in 2017, and I hope the rekindling of the writing habit can accelerate this.
 
 Additionally in 2016 I started an internal Podcast about what people in the
 company are working on to get a peek into more corners of a fast-growing
@@ -190,20 +201,21 @@ months, it kept the scale amazingly stable.
 
 I've traveled significantly less this year than last, which was too much
 airplane time. In the beginning of the year I was in Brazil, I extended a
-conference visit with vacation. [Rafael France](https://github.com/rafaelfranca)
-showed me a great time in Sao Paulo, with the traditional eats and customs. I
-spend a lot of time reading and writing, and had an overall enjoyable time,
-despite losing my passport an hour before an international departure from Rio to
-home (and somehow recovering it from a cab 5 minutes before gate closure) and
-getting my phone ripped out of my hands by a kid on a bike in a 'safe'
-neighbourhood of Sao Paulo the week before. I did a handful of trips to Montreal
-and Toronto with friends (and compiled my culinary recommendations on the
-[Truffle Grater](http://trufflegrater.com/) website). In July my girlfriend and
-I went to Eastern Canada, Nova Scotia and Prince Edward Island, to visit her
-sister, aunt and uncle, hike, relax and mostly importantly eat lobster. In
-September we went to Spain, Barcelona, driving through the Pyrenees and ending
-up in San Sebastian. It's a stunning area, and San Sebastian might just be my
-favourite culinary destination in the world currently. 
+conference visit with vacation. [Rafael Franca](https://github.com/rafaelfranca)
+showed me a great afternoon and night in Sao Paulo, with the traditional eats
+and customs. I spent lot of time reading and writing, and had an overall
+enjoyable time, despite losing my passport an hour before an international
+departure from Rio to home (and somehow recovering it from a cab 5 minutes
+before gate closure) and getting my phone ripped out of my hands by a kid on a
+bike in a 'safe' neighbourhood of Sao Paulo the week before (while I was taking
+notes to an Audiobook, the habit I mentioned before). I did a handful of trips
+to Montreal and Toronto with friends (and compiled my culinary recommendations
+on the [Truffle Grater](http://trufflegrater.com/) website). In July my
+girlfriend and I went to Eastern Canada, Nova Scotia and Prince Edward Island,
+to visit her sister, aunt and uncle, hike, relax and mostly importantly eat
+lobster. In September we went to Spain, Barcelona, driving through the Pyrenees
+and ending up in San Sebastian. It's a stunning area, and San Sebastian might
+just be my favourite culinary destination in the world currently. 
 
 <iframe
 src="https://drive.google.com/file/d/1OhJTkzwHbmwCAHE2hAFbZzhroilQ1Ka5qA/preview"
