Add link to tea shop

--- a/_posts/2017-01-06-2016.md
+++ b/_posts/2017-01-06-2016.md
@@ -126,8 +126,9 @@ have 4286 cards. I hope to reach 10,000 this year!
 
 ## Tea
 
-In the beginning of last year I noticed a tea shop that had opened across from
-my apartment. I didn't know much about tea, but I had heard of fermented tea
+In the beginning of last year I noticed a [tea
+shop](https://world-of-tea.myshopify.com/) that had opened across from my
+apartment. I didn't know much about tea, but I had heard of fermented tea
 (pu-erh or dark tea) and wanted to try it. I came in, and got schooled hard for
 45 minutes on tea by the owner. I walked out dumbfounded with $100 worth of tea
 equipment and leaves in my arms. I was taken aback. How could someone know so
