--- a/_posts/2017-01-06-2016.md
+++ b/_posts/2017-01-06-2016.md
@@ -4,16 +4,16 @@ title: 2016
 ---
 
 Last year I posted mostly [numbers](http://sirupsen.com/2015/) from the year of
-2015. This year, more text, less numbers.
+2015. This year, more text, fewer numbers.
 
 ## Reading
 
 In 2015, I focused on developing a reading routine. I kicked the news habit
-years ago. I found the The tidbits of incoherent information with no trunk to
+years ago. I found the tidbits of incoherent information with no trunk to
 associate it with difficult to remember. On the contrary, the books and in-depth
 articles I read, I often found myself coming back to. In 2015 I managed to read
 and listen to a total of 40 books, but I wasn't happy with the retention. By the
-end of the year it felt like a race to an arbitrary finish line rather than a
+end of the year, it felt like a race to an arbitrary finish line rather than a
 pursuit of perspective.  The majority of the books of 2015 were business books,
 a bias I was looking to combat this year. My friends often tease me that my
 English vocabulary is hilariously skewed by business jargon since English became
@@ -42,19 +42,19 @@ started keeping a "commonplace book" in Workflowy of passages I found curious. A
 repository for later reflection.  The sources vary widely: conversations,
 articles, podcasts, books, Kindle highlights, ideas, .. any source of knowledge
 you can think of. They're quotes, rough ideas, and pictures.  For a couple of
-months in the beginning of the year I sat down every morning and spent 10-30
+months in the beginning of the year, I sat down every morning and spent 10-30
 minutes writing about one of the pieces in the commonplace book. I keep coming
 back to the ideas that unfolded in that writing, and this is a habit I'm going
 to make another effort to cultivate further this year.
-* **Flash cards**. Reviewing flash cards have been a wonderful habit to build
+* **flashcards**. Reviewing flashcards have been a wonderful habit to build
 for recalling more factual information. As opposed to more abstract ideas that I
 have found difficult distilling down to flash-cards. More on this technique in a
 second.
-* **Taking notes**. For primarily audiobooks I experimented with taking notes
+* **Taking notes**. For primarily audiobooks, I experimented with taking notes
 while listening. Similar to writing reviews/summaries that usually came from
 Kindle highlights or hand-written notes, I didn't find this as effective as I
 thought I would be (unless it landed in the commonplace book). At least, the
-mere writing doesn't make an effect. Reflection later, does, but that's a harder
+mere writing doesn't make an effect. Reflection later does, but that's a harder
 habit to build.
 * **Re-reading / re-listening**. When re-visiting content this year from
 previous years, I was astonished. From books and podcasts I thought I had
@@ -87,49 +87,48 @@ people want. It's a book about effective listening. This book gave me tools I
 will continue to hone this year in stronger communication. [My short
 review](https://www.goodreads.com/review/show/1722878534?book_show_action=false&from_review_page=1).
 
-## Flash Cards
+## Flashcards
 
-After having tried to get into the habit of flash cards for a couple of years,
-this year I've been doing my flash cards nearly every single day. At this point,
+After having tried to get into the habit of flashcards for a couple of years,
+this year I've been doing my flashcards nearly every single day. At this point,
 they're a staple in my learning arsenal and I have found them very effective.
 When I went to Brazil earlier this year, I decided to learn as much as I could
 about the country before going. If you don't know anything about what a museum
 has to offer, for instance, it tends to be much less interesting than if you're
 recognizing things you've only read about. I studied Brazil and created 100s of
-flash cards about its history, its people, its cuisine and its culture. A year
-later, due to these flash cards, I still remember why Brazil has the largest
-Japanese population after Japan, how Brazil got its non-violent independency,
+flashcards about its history, its people, its cuisine and its culture. A year
+later, due to these flashcards, I still remember why Brazil has the largest
+Japanese population after Japan, how Brazil got its non-violent independence,
 and the rough economic history of the country from Brazilwood, to sugar, to
-coffee, and so on. This backbone about the country made conversations with
-locals much
-more interesting.
+coffee, and so on. This understanding of the country made conversations with
+locals much more interesting.
 
-As I kept reviewing my flash cards every morning, the number of cards kept
+As I kept reviewing my flashcards every morning, the number of cards kept
 growing. I started using them for food.  Before going to a restaurant, I'd look
-up all the items on the menu I had no idea what were and create flash cards for
+up all the items on the menu I had no idea what were and create flashcards for
 them (I still don't understand why restaurants insist on using fancy culinary
 words that most of their diners won't know). I've started learning the trees and
 flowers of Ontario and when produce from celery roots to apricots are in season.
 
-When studying a fact-heavy topic, I'll usually create a handful of flash cards
+When studying a fact-heavy topic, I'll usually create a handful of flashcards
 to help retain the knowledge long-term. I've found it freeing to study things
 here and there with the confidence that I'll still remember a good chunk of it a
 year later. When traveling to Mexico in December, I started learning the 650
-most common words to kick off learning Spanish. Unfortunately work became quite
+most common words to kick off learning Spanish. Unfortunately, work became quite
 intense at the same time, not leaving much excess energy to actually learn the
 grammar—but it'll certainly help when I dig deeper into the language (and was
 quite helpful on the trip too).
 
-Reviewing flash cards is now an ingrained habit, and it's already helped me
-tremendously. [Anki](ankisrs.net), the app I use for flash cards, reports that I
+Reviewing flashcards is now an ingrained habit, and it's already helped me
+tremendously. [Anki](ankisrs.net), the app I use for flashcards, reports that I
 have 4286 cards. I hope to reach 10,000 this year!
 
 ## Tea
 
-In the beginning of last year I noticed a [tea
+In the beginning of last year, I noticed a [tea
 shop](https://world-of-tea.myshopify.com/) that had opened across from my
 apartment. I didn't know much about tea, but I had heard of fermented tea
-(pu-erh or dark tea) and wanted to try it. I came in, and got schooled hard for
+(pu-erh or dark tea) and wanted to try it. I came in and got schooled hard for
 45 minutes on tea by the owner. I walked out dumbfounded with $100 worth of tea
 equipment and leaves in my arms. I was taken aback. How could someone know so
 much about something I knew absolutely nothing about? Fuelled by this healthy
@@ -156,12 +155,12 @@ write about problems that arose on the team, how to best lead a long-term
 project, and how to help people grow. It helped a lot. Over time, the team grew,
 to its peak of 7 people. A month shy of Black Friday and Cyber Monday, the
 ultimate exam, we shipped the project after a year of hard work. I am extremely
-proud of the team, and humbled by the growth I have seen by all members of it.
+proud of the team and humbled by the growth I have seen by all members of it.
 In 2016 I learned so much about managing a team and project. I screwed up a lot
 of things, and did some things right. There's considerable room for improvement
 in 2017, and I hope the rekindling of the writing habit can accelerate this.
 
-Additionally in 2016 I started an internal Podcast about what people in the
+Additionally, in 2016 I started an internal Podcast about what people in the
 company are working on to get a peek into more corners of a fast-growing
 company. You can read more about this in [this
 post](http://sirupsen.com/podcast).
@@ -169,25 +168,25 @@ post](http://sirupsen.com/podcast).
 ## Cooking
 
 While cooking has always been a hobby, I feel that 2016 marks a year where I've
-developed more than in the past. In the Spring with a group of friends we kicked
+developed more than in the past. In the Spring with a group of friends, we kicked
 off "Around the World Cuisine", go to [random.country](http://random.country/),
 and hold a potluck dinner centered around this theme. I have found inspiration
 in the theme of touring the world's cuisines with respect to [the local seasonal
 ingredients](http://sirupsen.com/season-driven-cooking/). I have started a
 personal project where I hope to get through as many countries as possible in
-the next year. For each country I cook a dish for I need to find someone from
+the next year. For each country, I cook a dish for I need to find someone from
 that country to sign off on the dish. Additionally, I want to read a book from
 each of those countries to complete it. I track all of this in
 [Airtable](http://sirupsen.com/airtable/).
 
 ## Airtable
 
-As for flash cards, Airtable has became a sharp tool in my toolbox. It's the
+As for flashcards, Airtable has become a sharp tool in my toolbox. It's the
 backbone of my tea explorations. I use it for keeping track of what I cook, how
 it went, and how to improve. As I venture through the world of cheese, I keep
-notes on each ones I try and what I like about them. I use it to build
-[vocabulary](http://sirupsen.com/airtable/), and have integration between
-Airtable and my flash cards. Book recommendations passed by friends are recorded
+notes on each one I try and what I like about them. I use it to build
+[vocabulary](http://sirupsen.com/airtable/) and have integration between
+Airtable and my flashcards. Book recommendations passed by friends are recorded
 in Airtable, and it's used to catalog ideas.
 
 ## Health
@@ -201,7 +200,7 @@ months, it kept the scale amazingly stable.
 ## Travel
 
 I've traveled significantly less this year than last, which was too much
-airplane time. In the beginning of the year I was in Brazil, I extended a
+airplane time. In the beginning of the year I went to Brazil, extending a
 conference visit with vacation. [Rafael Franca](https://github.com/rafaelfranca)
 showed me a great afternoon and night in Sao Paulo, with the traditional eats
 and customs. I spent lot of time reading and writing, and had an overall
@@ -213,10 +212,10 @@ notes to an Audiobook, the habit I mentioned before). I did a handful of trips
 to Montreal and Toronto with friends (and compiled my culinary recommendations
 on the [Truffle Grater](http://trufflegrater.com/) website). In July my
 girlfriend and I went to Eastern Canada, Nova Scotia and Prince Edward Island,
-to visit her sister, aunt and uncle, hike, relax and mostly importantly eat
+to visit her sister, aunt, and uncle, hike, relax and mostly importantly eat
 lobster. In September we went to Spain, Barcelona, driving through the Pyrenees
 and ending up in San Sebastian. It's a stunning area, and San Sebastian might
-just be my favourite culinary destination in the world currently. 
+just be my favorite culinary destination in the world currently. 
 
 <iframe
 src="https://drive.google.com/file/d/1OhJTkzwHbmwCAHE2hAFbZzhroilQ1Ka5qA/preview"
