--- a/_posts/2017-01-06-2016.md
+++ b/_posts/2017-01-06-2016.md
@@ -120,8 +120,8 @@ grammar—but it'll certainly help when I dig deeper into the language (and was
 quite helpful on the trip too).
 
 Reviewing flashcards is now an ingrained habit, and it's already helped me
-tremendously. [Anki](ankisrs.net), the app I use for flashcards, reports that I
-have 4286 cards. I hope to reach 10,000 this year!
+tremendously. [Anki](https://ankisrs.net), the app I use for flashcards, reports
+that I have 4286 cards. I hope to reach 10,000 this year!
 
 ## Tea
 
