interlink airtable posts

--- a/_posts/2016-11-20-airtable.md
+++ b/_posts/2016-11-20-airtable.md
@@ -13,7 +13,8 @@ fantastic user-interface, which means that I can focus on creating schemas that
 make sense. When writing integrations I can focus solely on the business logic,
 knowing that the Airtable interface will mostly work. Most applications deserve
 to start as a simple spreadsheet before evolving into a domain-specific thing.
-Airtable excels at this.
+Airtable excels at this. I call this "Minimum Viable Airtable", I wrote more
+about this in [this post](http://sirupsen.com/minimum-viable-airtable/).
 
 I often get asked how I use Airtable, and why I'm so excited about it--I don't
 always have the opportunity to do my full Airtable spiel. This post exists for
