--- a/_posts/2017-04-27-2017-railsconf.md
+++ b/_posts/2017-04-27-2017-railsconf.md
@@ -1,5 +1,5 @@
 ---
 layout: post
-title: "Talk at Railsconf: 5 Years of Rails Scaling to Support Massive Sales"
-external_url: http://railsconf.com/program
+title: "Talk at Railsconf: 5 Years of Rails Scaling to 80K RPS"
+external_url: https://www.youtube.com/watch?v=4dWJahMi5NI
 ---
