update airtable post with gif

--- a/_posts/2016-11-20-airtable.md
+++ b/_posts/2016-11-20-airtable.md
@@ -45,11 +45,10 @@ as you get comfortable with the domain.
 
 This is a simple base I use to track books and who's endorsed them. It helps me
 decide which book to read next. When I hear recommendations of books I'll note
-it down here to guide my next decision. It's not perfectly tagged, I have on my
-list for this base to write a script that'll populate the books with
-metadata--but it hasn't been terribly important.
+it down here to guide my next decision. Whenever I enter a new book, it
+automatically populates it with metadata from Goodreads.
 
-![](/static/images/airtable/books.png)
+![](/static/images/airtable/books.gif)
 
 ## Tea
 
