--- a/_posts/2017-12-30-2017.md
+++ b/_posts/2017-12-30-2017.md
@@ -104,4 +104,4 @@ Since learning that crops for livestock occupies for [1/3 of all arable land and
 My workout system hasn’t changed much this year, keeping it consistently at ~3 weight-lifting sessions per week. I haven’t added much strength this year, mostly because I wasn’t paying enough attention to the planning. Late this year, I’ve adopted a cyclic program that has me progress more consistently every month, at a more healthy pace. In my previous program, I’d try to beat the last workout’s PR every time. This often caused me to overdo it in the next workout, leaving me unable to recover for the one after, and then getting back to where I started. I hope this is the change I need to progress to the next level. I’m mostly happy with the regime here, and it keeps my base-level of shape quite good. I lack some aerobic capacity, which I’d like to look into sometime in 2018.
 
 ## 2018
-I feel that I’ve distanced myself a tad too much from technology this year, spending the majority of my time on reading about leadership in some form or another. I’d like to get more into the weeds again next year in my spare time, and I have a few ideas for things I’d like to work on. I truly think that the skills I’ve worked on developing in areas outside of software will be invaluable in pulling off increasingly bigger projects, but I need to get back and focus a bit on the foundations. I’ll continue to hone my habits and systems, as always. Currently, I am most interested in the situational checklists and memorization—we’ll see where that takes me. I see myself porting my index cards into Airtable as well, attempting to combine the best of a paper and digital system.
+I feel that I’ve distanced myself a tad too much from technology this year, spending the majority of my time on reading about leadership in some form or another. I’d like to get more the technical weeds again next year in my spare time, and I have a few ideas for things I’d like to work on. I truly think that the skills I’ve worked on developing in areas outside of software will be invaluable in pulling off increasingly bigger projects, but I need to get back and focus a bit on the foundations. I’ll continue to hone my habits and systems, as always. Currently, I am most interested in the situational checklists and memorization—we’ll see where that takes me. I see myself porting my index cards into Airtable as well, attempting to combine the best of a paper and digital system.
